# modula

./: Cargo.toml  README.md
crates/modula_asset/: Cargo.toml
crates/modula_asset/src/: lib.rs
crates/modula_core/: Cargo.toml
crates/modula_core/src/: lib.rs  world_ext.rs
crates/modula_render/: Cargo.toml
crates/modula_render/src/: lib.rs  render_target.rs  sequence.rs  shader.rs
crates/modula_render/src/sequence/: basic.rs
crates/modula_sprite/: Cargo.toml
crates/modula_sprite/src/: lib.rs
crates/modula_texture/: Cargo.toml
crates/modula_texture/src/: atlas.rs  lib.rs
crates/modula_texture/src/atlas/: default_layouter.rs  render.rs
crates/modula_time/: Cargo.toml
crates/modula_time/src/: lib.rs
crates/modula_utils/: Cargo.toml
crates/modula_utils/src/: lib.rs
examples/: colors.rs  window.rs
src/: lib.rs
