workspace = { members = ["crates/modula_sprite"] }
[package]
name = "modula"
version = "0.0.0"
edition = "2021"

[dependencies]
modula_core = { path = "crates/modula_core" }
modula_render = { path = "crates/modula_render" }
modula_sprite = { path = "crates/modula_sprite" }
modula_asset = { path = "crates/modula_asset" }
modula_texture = { path = "crates/modula_texture" }
modula_utils = { path = "crates/modula_utils" }

[dev-dependencies]
winit = "0.30"
wgpu = "0.20"
bevy_ecs = "0.14"

[[example]]
name = "window"
path = "examples/window.rs"

[[example]]
name = "colors"
path = "examples/colors.rs"
