[package]
name = "modula_render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modula_core = { path = "../modula_core"}
modula_utils = { path = "../modula_utils"}
modula_asset = { path = "../modula_asset"}
bevy_ecs = "0.14"
winit = "0.30"
wgpu = "22.1"