[package]
name = "modula_texture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modula_core = { path = "../modula_core" }
modula_asset = { path = "../modula_asset" }
modula_render = { path = "../modula_render" }
wgpu = "0.20"
image = "0.25"
bevy_ecs = "0.14"